@@ -64,8 +64,10 @@ void        gtk_weather_run_conditions_dialog(GtkWidget * widget);
 gchar *     gtk_weather_get_tooltip_text(GtkWidget * widget);
 GtkWidget * gtk_weather_create_preferences_dialog(GtkWidget * widget);
 
-/* if USE_STANDALONE is used then application should provide this function */
+/* if USE_STANDALONE is used then application should provide these functions */
 void weather_save_configuration(GtkWidget * pWeather, LocationInfo * pLocation);
+void weather_set_label_text(GtkWidget * pWeather, GtkWidget * label,
+                            const gchar * text);
 
 G_END_DECLS
 
